update parser. working on error messages

--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -1,2 +1,4 @@
 Title = SLogo IDE
 Button1 = I'm Button1 from resource
+CommandError = Don't know how to 
+VariableError = The following variable was not found:
