made the errors work

--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -1,4 +1,7 @@
 Title = SLogo IDE
 Button1 = I'm Button1 from resource
+ErrorTitle = Error!
 CommandError = Don't know how to 
-VariableError = The following variable was not found:
+VariableError = The following variable was not found: 
+FileSaveError = Cannot save file: 
+FileOpenError = Cannot open file: 
