--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -5,3 +5,4 @@ CommandError = Don't know how to
 VariableError = The following variable was not found: 
 FileSaveError = Cannot save file: 
 FileOpenError = Cannot open file: 
+OutOfBoundsError = Wrong number of arguments!
