--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -6,3 +6,11 @@ VariableError = The following variable was not found:
 FileSaveError = Cannot save file: 
 FileOpenError = Cannot open file: 
 OutOfBoundsError = Wrong number of arguments!
+New = New
+Help = Help
+Run = Run
+Clear = Clear
+Open = Open
+Save = Save
+Script = script
+Shell = shell
