Extracted some strings to resource file, final bit of work for this lab time

--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -14,3 +14,8 @@ Open = Open
 Save = Save
 Script = script
 Shell = shell
+PreferencesTitle = Preferences
+PenColor = Pen Color
+BackColor = Background
+ImageSelect = Image Select
+ShowCurrents = Show Selected
