--- a/src/resources/ui/Chinese.properties
+++ b/src/resources/ui/Chinese.properties
@@ -1,2 +1,19 @@
 Title = SLogo \u7F16\u8F91\u5668
 Button1 = I'm Button1 from resource
+ErrorTitle = Error!
+CommandError = Don't know how to 
+VariableError = The following variable was not found: 
+FileSaveError = Cannot save file: 
+FileOpenError = Cannot open file: 
+OutOfBoundsError = Wrong number of arguments!
+New = \u65B0\u5EFA
+Help = \u5E2E\u52A9
+Run = \u8FD0\u884C
+Clear = \u6E05\u7A7A
+Open = \u6253\u5F00
+Save = \u4FDD\u5B58
+Script = \u811A\u672C
+Shell = \u547D\u4EE4\u884C
+Variables = \u53D8\u91CF
+Commands = \u6307\u4EE4
+History = \u64CD\u4F5C\u5386\u53F2
