--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -4,7 +4,9 @@ ErrorTitle = Error!
 CommandError = Don't know how to 
 VariableError = The following variable was not found: 
 FileSaveError = Cannot save file: 
-FileOpenError = Cannot open file: 
+FileOpenError = Cannot open file:
+ConfigSaveError = Cannot save config:
+ConfigOpenError = Cannot open config: 
 OutOfBoundsError = Wrong number of arguments!
 New = New
 Help = Help
