Extracted out abstract class for tabs for flexibility

--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -19,11 +19,16 @@ Script = script
 Shell = shell
 PreferencesTitle = Preferences
 PenColor = Pen Color
-BackColor = Background
+PenThick = Pen Thickness
+Background = Background
+BackColor = Background Color
 ImageSelect = Image Select
 ShowCurrents = Show Selected
 Variables = variables
 Commands = commands
 History = history
 PenPrefs = Pen Preferences
+Turtle = Turtle
+PenUp = Pen Up
+PenDown = Pen Down
 
