Working version of palette for colors which updates

--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -32,3 +32,5 @@ Turtle = Turtle
 PenUp = Pen Up
 PenDown = Pen Down
 ShowCommandable = Display if Turtle is Selected
+BadRGB = Invalid RGB Values
+BadRGBMessage = RGB values must be between 0 - 255
