Added color palette to integrated interface and have alerts for handling invalid indices

--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -34,3 +34,6 @@ PenDown = Pen Down
 ShowCommandable = Display if Turtle is Selected
 BadRGB = Invalid RGB Values
 BadRGBMessage = RGB values must be between 0 - 255
+ColorPal = Color Palette
+PalIndexError = Palette Index Error
+PalIndexErrorMessage = Given index is out of bounds with the current palette.
