--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -27,8 +27,8 @@ ShowCurrents = Show Selected
 Variables = variables
 Commands = commands
 History = history
-PenPrefs = Pen Preferences
-Turtle = Turtle
+PenPrefs = Pen Settings
+Turtle = Turtle Settings
 PenUp = Pen Up
 PenDown = Pen Down
 ShowCommandable = Display if Turtle is Selected
@@ -37,3 +37,7 @@ BadRGBMessage = RGB values must be between 0 - 255
 ColorPal = Color Palette
 PalIndexError = Palette Index Error
 PalIndexErrorMessage = Given index is out of bounds with the current palette.
+SlowDown = Slown Down
+SpeedUp = Speed Up
+HideTurtle = Hide Turtles
+ShowTurtle = Show Turtles
