Updated API changes, changed strings to resource file

--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -41,3 +41,6 @@ SlowDown = Slown Down
 SpeedUp = Speed Up
 HideTurtle = Hide Turtles
 ShowTurtle = Show Turtles
+ImageFiles = Images Files
+VarEditContext = Enter desired double value for 
+ValueEditor = Value Editor for 
