--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -27,7 +27,7 @@ ShowCurrents = Show Selected
 Variables = variables
 Commands = commands
 History = history
-PenPrefs = Pen Settings
+EnviroPrefs = Environment
 Turtle = Turtle Settings
 PenUp = Pen Up
 PenDown = Pen Down
@@ -44,3 +44,5 @@ ShowTurtle = Show Turtles
 ImageFiles = Images Files
 VarEditContext = Enter desired double value for 
 ValueEditor = Value Editor for 
+Yes = yes
+No = no
