gui for debugging

--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -11,6 +11,8 @@ OutOfBoundsError = Wrong number of arguments!
 New = New
 Help = Help
 Run = Run
+Debug = Debug
+Step = Step
 Clear = Clear
 Open = Open
 Save = Save
