remove prints and add chinese ui

--- a/src/resources/ui/English.properties
+++ b/src/resources/ui/English.properties
@@ -19,6 +19,7 @@ Save = Save
 SaveAs = Save As
 Script = script
 Shell = shell
+CannotShowHelpPage = Cannot show help page
 PreferencesTitle = Preferences
 PenColor = Pen Color
 PenThick = Pen Thickness
